TabManager: Remove a redundant log line which produces excessive log.

KillTab() returns false on valid cases, so useless to report it.

BUG=chromium:721632
TEST=manual

Review-Url: https://codereview.chromium.org/2879673004
Cr-Commit-Position: refs/heads/master@{#471470}

Former-commit-id: 9c5c339f64135eedc7af11876f52a23fda402b15